Sun Mar 25 22:07:34 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.[ch] libxslt/variables.[ch] libxslt/xsltproc.c:
	  implemented command line parameter passing
	* tests/xmlspec/Makefile.am tests/xmlspec/REC-xml-20001006-review.html:
	  tested it by passing show.diff.markup=1 to build the review version too

Sat Mar 24 19:35:42 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

        Huge cleanup, I switched to compile with
	-Wall -g -O -ansi -pedantic -W -Wunused -Wimplicit
	-Wreturn-type -Wswitch -Wcomment -Wtrigraphs -Wformat
	-Wchar-subscripts -Wuninitialized -Wparentheses -Wshadow
	-Wpointer-arith -Wcast-align -Wwrite-strings -Waggregate-return
	-Wstrict-prototypes -Wmissing-prototypes -Wnested-externs -Winline
	* libxslt/attributes.c libxslt/extensions.c libxslt/extra.c
          libxslt/functions.c libxslt/keys.c libxslt/numbers.c
          libxslt/pattern.c libxslt/preproc.c libxslt/templates.c
          libxslt/transform.c libxslt/variables.c libxslt/xslt.c
          libxslt/xsltutils.c: basically made static unexported functions
	  avoided name clashes and flagged unused parameters.

Thu Mar 22 22:52:48 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in: 0.6.0 yet another release
	* doc/xslt.html doc/html/*: updated the docs

Wed Mar 21 23:19:11 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltInternals.h libxslt/xslt.c libxslt/transform.c
	  libxslt/templates.[ch] libxslt/preproc.c libxslt/extensions.[ch]
	  extended xsltEvalStaticAttrValueTemplate and 
	  xsltEvalAttrValueTemplate to support foreign namespaces,
	  and fixed document()

Mon Mar 19 18:40:40 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* xsltutils.h: cleanup some garbage added last night
	* xsltInternals.h variables.c transform.c templates.[ch]
	  preproc.c pattern.c keys.c: switched the whole XSLt processing
	  to use XPath precompiled expressions and reusing them.