@@ -20,6 +20,15 @@ extern "C" {
 #define DEBUG_MEMORY_LOCATION
 #endif
 
+#ifdef __GNUC__
+#include <ansidecl.h>
+#ifndef ATTRIBUTE_UNUSED
+#define ATTRIBUTE_UNUSED
+#endif
+#else
+#define ATTRIBUTE_UNUSED
+#endif
+
 #ifdef __cplusplus
 }
 #endif
